feat: Card background color (#414)
* Card background color

* Attach PS environment to branch profile-color-palette

* Update packages/data/src/schema/mutations/updateCard.ts

Co-authored-by: fahbe <shecart.mydev@gmail.com>

---------

Co-authored-by: fdecampredon <fdecampredon@users.noreply.github.com>
Co-authored-by: fahbe <shecart.mydev@gmail.com>

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -903,6 +903,10 @@
     "defaultMessage": "Justify",
     "description": "Label of the justify alignment button"
   },
+  "aWyLFo": {
+    "defaultMessage": "Web card color",
+    "description": "Profile screen color picker title"
+  },
   "abCe+w": {
     "defaultMessage": "Edit Style",
     "description": "Simple text bottom menu label for style tab"
